--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,59 @@ bootstrap4 = "^0.1.0"
 pdfplumber = "^0.11.2"
 langchain-openai = "^0.1.19"
 langchain = "^0.2.11"
-
+gunicorn = "^21.2.0"
+openai = "^1.0.0"
+Pillow = "^10.0.0"
 
 [tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
+black = "^24.0.0"
+isort = "^5.13.0"
+pytest = "^8.0.0"
+pytest-django = "^4.8.0"
+coverage = "^7.4.0"
 django-debug-toolbar = "^4.4.6"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 127
+target-version = ['py310']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 127
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.flake8]
+max-line-length = 127
+extend-ignore = ["E203", "W503"]
+exclude = [
+    ".git",
+    "__pycache__",
+    "build",
+    "dist",
+    ".venv",
+    "venv",
+    "migrations",
+]
